[gd_scene load_steps=6 format=3 uid="uid://bfsbobqoansaw"]

[ext_resource type="PackedScene" uid="uid://q0chvlgo0nsh" path="res://scenes/test/GameMenuScreenBackground.tscn" id="1_60hll"]
[ext_resource type="Script" uid="uid://bku5lx70nldp5" path="res://scenes/ui/game_menu_screen.gd" id="1_hi2d0"]
[ext_resource type="Theme" uid="uid://cvevndji4t07j" path="res://scenes/ui/game_ui_theme.tres" id="1_t5emp"]
[ext_resource type="PackedScene" uid="uid://bdurlw7ukqauk" path="res://scenes/components/music_component.tscn" id="2_jk4o3"]

[sub_resource type="SystemFont" id="SystemFont_y4eyr"]
subpixel_positioning = 0

[node name="GameMenuScreen" type="CanvasLayer"]
script = ExtResource("1_hi2d0")

[node name="musicComponent" parent="." instance=ExtResource("2_jk4o3")]

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("1_60hll")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t5emp")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.458824, 0.298039, 0.376471, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = SubResource("SystemFont_y4eyr")
theme_override_font_sizes/font_size = 54
text = "AGRIPREDICT"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 190)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "START"

[node name="creditButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Credit"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/creditButton" to="." method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
